--- a/src/component/container/style.css
+++ b/src/component/container/style.css
@@ -1,10 +1,3 @@
 .admin-container {
-    position: absolute;
-    top: 50px;
-    right: 0;
-    bottom: 0;
-    left: 240px;
-    padding: 15px;
-    overflow-y: auto;
-    overflow-x: hidden;
+  position: relative;
 }
