--- a/src/component/preview-image/style.less
+++ b/src/component/preview-image/style.less
@@ -25,15 +25,16 @@
       display: inline-block;
       .preview-img-icon-close {
         position: absolute;
-        top: -40px;
-        right: -35px;
-        font-size: 45px;
+        top: 5px;
+        right: 5px;
+        font-size: 30px;
         color: #ccc;
-        padding: 5px 7px;
+        padding: 5px;
+        line-height: 1;
         cursor: pointer;
       }
       .preview-img-icon-close:hover {
-        color: #fff;
+        color: #d24445;
       }
     }
   }
