添加旋转按钮样式

--- a/src/component/preview-image/style.less
+++ b/src/component/preview-image/style.less
@@ -26,8 +26,8 @@
             background-color: rgba(0, 0, 0, .5);
         }
         .operation-wrap {
-          position: absolute;
-          border: 1px solid red;
+            position: absolute;
+            border: 1px solid red;
         }
         .preview-content {
             position: absolute;
@@ -40,20 +40,16 @@
                 cursor: pointer;
             }
             .preview-icon:hover {
-              color: #d24445;
+                color: #d24445;
             }
             .preview-icon-close {
-                top: 5px;
-                right: 5px;
+
             }
             .preview-icon-rotation-left {
-                bottom: 5px;
-                left: 5px;
                 font-size: 26px;
+                color: red;
             }
             .preview-icon-rotation-right {
-                bottom: 5px;
-                right: 5px;
                 font-size: 26px;
             }
             .preview-overlay {
@@ -66,18 +62,18 @@
             }
         }
         .preview-rotation-left {
-          transform:rotate(90deg);
-          -ms-transform:rotate(90deg); 	/* IE 9 */
-          -moz-transform:rotate(90deg); 	/* Firefox */
-          -webkit-transform:rotate(90deg); /* Safari 和 Chrome */
-          -o-transform:rotate(90deg); 	/* Opera */
+            transform: rotate(90deg);
+            -ms-transform: rotate(90deg); /* IE 9 */
+            -moz-transform: rotate(90deg); /* Firefox */
+            -webkit-transform: rotate(90deg); /* Safari 和 Chrome */
+            -o-transform: rotate(90deg); /* Opera */
         }
         .preview-rotation-right {
-          transform:rotate(-90deg);
-          -ms-transform:rotate(-90deg); 	/* IE 9 */
-          -moz-transform:rotate(-90deg); 	/* Firefox */
-          -webkit-transform:rotate(-90deg); /* Safari 和 Chrome */
-          -o-transform:rotate(-90deg); 	/* Opera */
+            transform: rotate(-90deg);
+            -ms-transform: rotate(-90deg); /* IE 9 */
+            -moz-transform: rotate(-90deg); /* Firefox */
+            -webkit-transform: rotate(-90deg); /* Safari 和 Chrome */
+            -o-transform: rotate(-90deg); /* Opera */
         }
     }
 }
