添加图片预览旋转功能

--- a/src/component/preview-image/style.less
+++ b/src/component/preview-image/style.less
@@ -25,10 +25,6 @@
             bottom: 0;
             background-color: rgba(0, 0, 0, .5);
         }
-        .operation-wrap {
-            position: absolute;
-            border: 1px solid red;
-        }
         .preview-content {
             position: absolute;
             .preview-icon {
@@ -43,14 +39,15 @@
                 color: #d24445;
             }
             .preview-icon-close {
-
+                transition: all .5s ease;
             }
             .preview-icon-rotation-left {
-                font-size: 26px;
-                color: red;
+                transition: all .5s ease;
+                font-size: 28px;
             }
             .preview-icon-rotation-right {
-                font-size: 26px;
+                transition: all .5s ease;
+                font-size: 28px;
             }
             .preview-overlay {
                 position: absolute;
@@ -60,6 +57,75 @@
                 left: 0;
                 cursor: move;
             }
+        }
+        .preview-rotation-0 {
+            .preview-icon-close {
+                top: -40px;
+                right: -5px;
+            }
+            .preview-icon-rotation-right {
+                top: -38px;
+                right: 45px;
+            }
+            .preview-icon-rotation-left {
+                top: -38px;
+                right: 80px;
+            }
+
+        }
+        .preview-rotation-1 {
+            transform: rotate(90deg);
+            .preview-icon-close {
+                top: -5px;
+                left: -40px;
+            }
+            .preview-icon-rotation-right {
+                top: 45px;
+                left: -38px;
+                transform: rotate(-90deg);
+            }
+            .preview-icon-rotation-left {
+                top: 80px;
+                left: -38px;
+                transform: rotate(-90deg);
+            }
+
+        }
+        .preview-rotation-2 {
+            transform: rotate(180deg);
+            .preview-icon-close {
+                bottom: -40px;
+                left: -5px;
+            }
+            .preview-icon-rotation-right {
+                bottom: -38px;
+                left: 45px;
+                transform: rotate(-180deg);
+            }
+            .preview-icon-rotation-left {
+                bottom: -38px;
+                left: 80px;
+                transform: rotate(-180deg);
+            }
+
+        }
+        .preview-rotation-3 {
+            transform: rotate(270deg);
+            .preview-icon-close {
+                bottom: -5px;
+                right: -40px;
+            }
+            .preview-icon-rotation-right {
+                bottom: 45px;
+                right: -38px;
+                transform: rotate(-270deg);
+            }
+            .preview-icon-rotation-left {
+                bottom: 80px;
+                right: -38px;
+                transform: rotate(-270deg);
+            }
+
         }
         .preview-rotation-left {
             transform: rotate(90deg);
