--- a/src/component/preview-image/style.less
+++ b/src/component/preview-image/style.less
@@ -27,28 +27,7 @@
         }
         .preview-content {
             position: absolute;
-            .preview-icon {
-                position: absolute;
-                font-size: 30px;
-                color: #ccc;
-                padding: 5px;
-                line-height: 1;
-                cursor: pointer;
-            }
-            .preview-icon:hover {
-                color: #d24445;
-            }
-            .preview-icon-close {
-                transition: all .5s ease;
-            }
-            .preview-icon-rotation-left {
-                transition: all .5s ease;
-                font-size: 28px;
-            }
-            .preview-icon-rotation-right {
-                transition: all .5s ease;
-                font-size: 28px;
-            }
+            transition: transform .3s ease;
             .preview-overlay {
                 position: absolute;
                 top: 0;
@@ -58,88 +37,53 @@
                 cursor: move;
             }
         }
+        .preview-operation-bar {
+            position: absolute;
+            transition: all .3s ease;
+            .fa {
+                font-size: 30px;
+                color: #ccc;
+                padding: 5px;
+                line-height: 1;
+                cursor: pointer;
+            }
+            .fa:hover {
+                color: #d24445;
+            }
+        }
         .preview-rotation-0 {
-            .preview-icon-close {
+            .preview-operation-bar {
                 top: -40px;
                 right: -5px;
             }
-            .preview-icon-rotation-right {
-                top: -38px;
-                right: 45px;
-            }
-            .preview-icon-rotation-left {
-                top: -38px;
-                right: 80px;
-            }
-
         }
         .preview-rotation-1 {
-            transform: rotate(90deg);
-            .preview-icon-close {
-                top: -5px;
+            .preview-operation-bar {
+                top: 105px;/*需要计算*/
                 left: -40px;
-            }
-            .preview-icon-rotation-right {
-                top: 45px;
-                left: -38px;
+                transform-origin: top left;
                 transform: rotate(-90deg);
             }
-            .preview-icon-rotation-left {
-                top: 80px;
-                left: -38px;
-                transform: rotate(-90deg);
-            }
-
         }
         .preview-rotation-2 {
-            transform: rotate(180deg);
-            .preview-icon-close {
-                bottom: -40px;
+            .preview-operation-bar {
+                bottom: -35px;
                 left: -5px;
-            }
-            .preview-icon-rotation-right {
-                bottom: -38px;
-                left: 45px;
+                transform-origin: center;
                 transform: rotate(-180deg);
             }
-            .preview-icon-rotation-left {
-                bottom: -38px;
-                left: 80px;
-                transform: rotate(-180deg);
-            }
-
         }
         .preview-rotation-3 {
-            transform: rotate(270deg);
-            .preview-icon-close {
-                bottom: -5px;
-                right: -40px;
-            }
-            .preview-icon-rotation-right {
-                bottom: 45px;
-                right: -38px;
-                transform: rotate(-270deg);
-            }
-            .preview-icon-rotation-left {
-                bottom: 80px;
-                right: -38px;
+            .preview-operation-bar {
+                bottom: 0;
+                right: 0;
+                transform-origin: bottom right;
                 transform: rotate(-270deg);
             }
 
         }
-        .preview-rotation-left {
-            transform: rotate(90deg);
-            -ms-transform: rotate(90deg); /* IE 9 */
-            -moz-transform: rotate(90deg); /* Firefox */
-            -webkit-transform: rotate(90deg); /* Safari 和 Chrome */
-            -o-transform: rotate(90deg); /* Opera */
-        }
-        .preview-rotation-right {
-            transform: rotate(-90deg);
-            -ms-transform: rotate(-90deg); /* IE 9 */
-            -moz-transform: rotate(-90deg); /* Firefox */
-            -webkit-transform: rotate(-90deg); /* Safari 和 Chrome */
-            -o-transform: rotate(-90deg); /* Opera */
+        .preview-image {
+            width: 500px;
         }
     }
 }
